--- a/index.html
+++ b/index.html
@@ -69,8 +69,14 @@
                 </div>
             </div>
         </div>
-
-
+        <div class="aboutme">
+            <div class="firstaboutme">
+                <p>Curious about me? Here You Have It</p>
+            </div>
+            <div class="secondaboutme">
+                <img src="" alt="">
+            </div>
+        </div>
     </div>
 </body>
 
