--- a/index.html
+++ b/index.html
@@ -65,17 +65,65 @@
 
             <div class="second">
                 <div class="img">
-                    <img src="./image.jpg" alt="image" class="header_image">
+                    <img src="./IMG_7663.JPG" alt="image" class="header_image">
                 </div>
             </div>
         </div>
         <div class="aboutme">
             <div class="firstaboutme">
-                <p>Curious about me? Here You Have It</p>
+                <div class="about_header">
+                    <p class="ab_header">About Me</p>
+                </div>
             </div>
-            <div class="secondaboutme">
-                <img src="" alt="">
+            <div class="aboutme_wrapper">
+                <div class="thirdaboutme">
+                    <img src="./IMG_7663.JPG" alt="image3" class="image3_header">
+                </div>
+                <div class="secondaboutme">
+                    <div class="aboout_footer">
+                        <p>Curious about me? Here you have it:</p>
+                    </div>
+                    <div class="about_para">
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque fugiat, unde rem facere
+                            repudiandae suscipit. Ipsam sint quam asperiores, aspernatur aperiam porro voluptatibus
+                            placeat sit dolorum autem. Esse, corrupti natus!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A id reprehenderit placeat, nihil
+                            assumenda minus cupiditate facilis? Mollitia sunt dolorem corrupti laborum, fugit omnis
+                            doloremque repudiandae eaque dolor voluptatem. Adipisci?
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur vel facere optio fuga.
+                            Beatae voluptatem unde cupiditate nemo, enim a et eius obcaecati vero magni sint iusto
+                            aperiam libero hic.</p>
+
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque fugiat, unde rem facere
+                            repudiandae suscipit. Ipsam sint quam asperiores, aspernatur aperiam porro voluptatibus
+                            placeat sit dolorum autem. Esse, corrupti natus!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A id reprehenderit placeat, nihil
+                            assumenda minus cupiditate facilis? Mollitia sunt dolorem corrupti laborum, fugit omnis
+                            doloremque repudiandae eaque dolor voluptatem. Adipisci?
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur vel facere optio fuga.
+                            Beatae voluptatem unde cupiditate nemo, enim a et eius obcaecati vero magni sint iusto
+                            aperiam libero hic.</p>
+                    </div>
+                    <div class="some_quick">
+                        <p>Finally some quick bit about me</p>
+                        <div class="list_about">
+                            <div class="list_about1">
+                                <li>Freelance</li>
+                                <li>UX Desginer</li>
+                            </div>
+
+                            <div class="list_about2">
+                                <li>Tech Greek</li>
+                                <li>Developer</li>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
             </div>
+
         </div>
     </div>
 </body>
