--- a/index.html
+++ b/index.html
@@ -125,6 +125,57 @@
             </div>
 
         </div>
+        <div class="skill">
+            <p class="skill_2">Skills</p>
+        </div>
+        <div class="skill_head">
+            <p>The Skills, tools and technologies I am really good</p>
+        </div>
+        <div class="image_head">
+            <div class="java_head">
+                <img src="./javascript.png" alt="image" class="java">
+                <p>Javascript</p>
+            </div>
+            <div class="figma_head">
+                <img src="./figma.png" alt="image" class="java">
+                <p>Figma</p>
+            </div>
+            <div class="react_head">
+                <img src="./React.png" alt="image" class="java">
+                <p>React</p>
+            </div>
+            <div class="nodejs_head">
+                <img src="./Node js.png" alt="image" class="java">
+                <p>Node.js</p>
+            </div>
+            <div class="express_head">
+                <img src="./express-js.png" alt="image" class="java">
+                <p>Express.js</p>
+            </div>
+        </div>
+        <div class="image_second">
+            <div class="postgresql_head">
+                <img src="./postgreSQL.png" alt="image" class="java">
+                <p>postgreSQL</p>
+            </div>
+            <div class="mongodb_head">
+                <img src="./MongoDB.png" alt="image" class="java">
+                <p>MongoDB</p>
+            </div>
+        <div class="socketio_head">
+            <img src="./socket.png" alt="image" class="java">
+            <p>Socket.io</p>
+        </div>
+        <div class="tailwindcss_head">
+            <img src="./Tailwind css.png" alt="image" class="java">
+            <p>Tailwindcss</p>
+        </div>
+        <div class="git_head">
+            <img src="./git.png" alt="image" class="java">
+            <p>GitHub</p>
+        </div>
+        </div>
+
     </div>
 </body>
 
